--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ hist(x, main = &quot;&quot;, ylab = &quot;Frequência&quot;)
   <article data-timings="">
     <p>Figuras podem ser inseridas a partir de links ou diretórios locais</p>
 
-<p>Carl Friedrich Gauß</p>
+<p>O logo do R</p>
 
-<p><img src="http://goo.gl/ZwTTXv" alt="&#39;Gauss&#39;"></p>
+<p><img src="http://developer.r-project.org/Logo/Rlogo-3.png" alt="&#39;R logo&#39;"></p>
 
   </article>
   <!-- Presenter Notes -->
