--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
   <article data-timings="">
     <h3>Slides disponíveis em <a href="">http://fernandomayer.github.io/slidify-rautu</a></h3>
 
-<h3>Feito com <a href="http://slidify.org">Slidify</a></h3>
-
 <h3>Melhor visualizado com <a href="http://www.chromium.org">Chromium</a> (ou <a href="https://www.google.com/chrome">Google Chrome</a>)</h3>
 
-<h3>Código-fonte disponível no <a href="https://github.com/fernandomayer/slidify-rautu">GitHub</a></h3>
+<h3>Para ver o código-fonte destes slides e instruções de como utilizá-lo, acesse a página no <a href="https://github.com/fernandomayer/slidify-rautu">GitHub</a></h3>
 
 <h3>Pressione &quot;o&quot; para visualizar miniaturas</h3>
 
