--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ blocks</em> ao invés dos <em>chunks</em> para gerar os resultados no R.</p>
 <pre><code class="r">(x &lt;- rnorm(10, 100, 15))
 </code></pre>
 
-<pre><code>##  [1] 103.10  83.50 119.82 119.18  70.79  94.94  83.49  91.98  97.08 102.07
+<pre><code>##  [1] 113.76832  93.82192 107.69820 108.79292 122.00614  89.30812 105.33242
+##  [8]  79.31986 122.29937 133.12106
 </code></pre>
 
   </article>
@@ -136,7 +137,7 @@ blocks</em> ao invés dos <em>chunks</em> para gerar os resultados no R.</p>
 <pre><code class="r">hist(x, main = &quot;&quot;, ylab = &quot;Frequência&quot;)
 </code></pre>
 
-<p><img src="assets/fig/grafico.png" alt="plot of chunk grafico"> </p>
+<p><img src="assets/fig/grafico-1.png" alt="plot of chunk grafico"> </p>
 
   </article>
   <!-- Presenter Notes -->
